--- a/css/index.css
+++ b/css/index.css
@@ -57,13 +57,15 @@ aside button.btn:hover {
     color: #ff6600;
 }
 
-#modal,#modal2,#modal3{
+#modal, #modal2, #modal3{
     position: absolute;
     top: 50px;
-    left: 400px;
+    left: 100px;
     width: 600px;
     /*border: 1px solid #ff6600;*/
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
+    height: 650px;
+    overflow: scroll;
 }
 
 /*#modal2 {
@@ -84,17 +86,32 @@ aside button.btn:hover {
     box-sizing: border-box;
 
 }*/
-@media only screen and (min-width: 400px) {
+.modal .modal-body{
+    height: 550px;
+    overflow: scroll;
+}
+.modal2 .modal-body{
+    height: 550px;
+    overflow: scroll;
+}
+.modal3 .modal-body{
+    height: 550px;
+    overflow: scroll;
+}
+
+@media screen and (min-width: 400px) {
+    
    #modal,#modal2,#modal3{
        width:100%;
        margin-left: 0px;
     }
+    
     #chartArea {
-    height: 400px;
+    margin-left:0px;
     width: 100%;
    }
     .modal .modal-body {
-     height: 400px;
+        width:100%;
         margin-left: 0px;
     }
     .modal2 .modal-body{
@@ -117,7 +134,7 @@ aside button.btn:hover {
 }
 
 #chartArea {
-    height: 400px;
+    height: 100%;
     width: 600px;
 }
 
