--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,10 @@ aside {
     display: none;
 }
 
+aside img {
+    width: 30%;
+}
+
 aside h2 {
     color: #ff6600;
     width: 100%;
@@ -62,6 +66,11 @@ aside button.btn {
 }
 
 aside button.btn:hover {
+    background-color: #666;
+    color: #ff6600;
+}
+
+aside button.btn:focus {
     background-color: #666;
     color: #ff6600;
 }
@@ -254,11 +263,6 @@ select:focus {
 }
 
 @media screen and (max-width: 400px) {
-
-    aside {
-        left: 50px;
-
-    }
 
     #modal, #modal2, #modal3 {
         width: 100%;
