fix a small UI bug

--- a/css/index.css
+++ b/css/index.css
@@ -178,6 +178,7 @@ select option {
     padding: 4px 10px 4px 10px;
     font-size: 14px;
     font-weight: normal;
+    box-sizing: border-box;
 }
 
 select option[selected] {
@@ -267,7 +268,6 @@ select:focus {
     #modal, #modal2, #modal3 {
         width: 100%;
         margin-left: 0;
-        z-index: 9999;
     }
 
     #chartArea {
